<resources>
    <string name="app_name">Basic Android API Client</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="new_user">New user</string>
    <string name="sign_up">Sign up</string>
    <string name="has_account">Has account?</string>
    <string name="name_hint">Name</string>
</resources>
