<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="32sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textSize="12sp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/name_hint"
                    android:padding="10dp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_up"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/has_account"
                        android:textSize="11sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/darker_gray"/>
                </LinearLayout>

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>